--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -151,7 +151,8 @@ section ul ul {
   --berkeley-blue: #003262;
   --berkeley-gold: #FDB515;
   --berkeley-gray: #DDD5C7;
-  --sidebar-width: 300px;
+  --sidebar-width: 250px;
+  --header-height: 80px;
 }
 
 
@@ -233,41 +234,16 @@ section ul ul {
 }
 
 /* side bar */
-.sidebar-indicator {
-    position: fixed;
-    top: 50%;
-    left: 0;
-    width: 20px;
-    height: 40px;
-    background-color: var(--berkeley-blue);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    border-radius: 0 5px 5px 0;
-    z-index: 1001;
-    transition: left 0.3s ease-in-out;
-}
-
-.sidebar-indicator span {
-    font-size: 20px;
-}
-
 .sidebar {
     position: fixed;
     top: var(--header-height);
-    left: -250px;
-    width: 250px;
+    left: calc(-1 * var(--sidebar-width));
+    width: var(--sidebar-width);
     height: calc(100vh - var(--header-height));
     background-color: var(--berkeley-blue);
     transition: left 0.3s ease-in-out;
     overflow-y: auto;
     z-index: 999;
-}
-
-.sidebar.open {
-    left: 0;
 }
 
 .sidebar nav {
@@ -287,5 +263,5 @@ section ul ul {
 }
 
 main.sidebar-open {
-    margin-left: 270px;
+    margin-left: var(--sidebar-width);
 }
